frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: homework
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: frontend
